@@ -434,6 +434,9 @@ enum {
 #define RS_RVid                 0x00020000UL    // reverse video
 #define RS_Uline                0x00040000UL    // underline
 
+// toggle this to force redraw, must be != RS_Careful
+#define RS_redraw               0x01000000UL
+
 // 5 custom bits for extensions
 #define RS_customCount          32
 #define RS_customMask           0x00f80000UL
